# nstd

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  test.py
.github/workflows/: rust.yml
include/: nstd.h
include/nstd/: alloc.h  app.h  core.h  cstring.h  env.h  fs.h  gl.h  heap_ptr.h  image.h  io.h  math.h  mutex.h  nstd.h  os.h  proc.h  shared_lib.h  shared_ptr.h  string.h  thread.h  time.h  timed_mutex.h  vec.h  window.h
include/nstd/app/: app.h  data.h  display.h  events.h  gamepad.h  handle.h
include/nstd/core/: alloc.h  core.h  cstr.h  cty.h  def.h  fty.h  ity.h  math.h  mem.h  ops.h  optional.h  ptr.h  range.h  result.h  slice.h  str.h  time.h  unichar.h
include/nstd/core/cstr/: cstr.h  raw.h
include/nstd/core/ptr/: ptr.h  raw.h
include/nstd/fs/: file.h  fs.h
include/nstd/gl/: bind_group.h  buffer.h  frame.h  gl.h  render_pass.h  sampler.h  shader.h  texture.h
include/nstd/io/: io.h  stderr.h  stdin.h  stdout.h
include/nstd/os/: os.h  unix.h  windows.h
include/nstd/os/unix/: alloc.h  io.h  mutex.h  shared_lib.h  time.h
include/nstd/os/windows/: alloc.h  shared_lib.h  str.h  windows.h
include/nstd/os/windows/alloc/: alloc.h  heap.h
src/: alloc.rs  app.rs  core.rs  cstring.rs  env.rs  fs.rs  gl.rs  heap_ptr.rs  image.rs  io.rs  lib.rs  math.rs  mutex.rs  os.rs  proc.rs  shared_lib.rs  shared_ptr.rs  string.rs  test.rs  thread.rs  time.rs  timed_mutex.cpp  timed_mutex.rs  vec.rs  window.rs
src/app/: data.rs  display.rs  events.rs  gamepad.rs  handle.rs
src/core/: alloc.rs  cstr.rs  cty.rs  def.rs  fty.rs  ity.rs  math.rs  mem.rs  ops.rs  optional.rs  ptr.rs  range.rs  result.rs  slice.rs  str.rs  time.rs  unichar.rs
src/core/cstr/: is_null_terminated.asm  raw.rs
src/core/cstr/arm/: is_null_terminated.asm
src/core/cstr/raw/: copy.asm  copy_with_null.asm  len.asm
src/core/cstr/raw/arm/: compare.asm  copy.asm  copy_with_null.asm  len.asm
src/core/cstr/raw/arm64/: compare.asm  copy.asm  copy_with_null.asm  len.asm
src/core/cstr/raw/x86/: compare.asm  copy.asm  copy_with_null.asm  len.asm
src/core/cstr/x86/: is_null_terminated.asm
src/core/mem/: fill.asm  zero.asm
src/core/mem/arm/: fill.asm  search.asm  zero.asm
src/core/mem/arm64/: fill.asm  search.asm  zero.asm
src/core/mem/x86/: fill.asm  search.asm  zero.asm
src/core/mem/x86_64/: zero.asm
src/core/ptr/: raw.rs
src/fs/: file.rs
src/gl/: bind_group.rs  buffer.rs  frame.rs  render_pass.rs  sampler.rs  shader.rs  texture.rs
src/io/: stderr.rs  stdin.rs  stdio.rs  stdout.rs
src/os/: unix.rs  windows.rs
src/os/unix/: alloc.asm  alloc.c  alloc.rs  io.rs  mutex.rs  shared_lib.c  shared_lib.rs  time.rs
src/os/unix/alloc/x86_64/: alloc.asm
src/os/unix/alloc/x86_64/macos/: alloc.asm
src/os/unix/io/: stdio.rs
src/os/unix/macos/: alloc.asm
src/os/windows/: alloc.rs  shared_lib.rs  str.rs
src/os/windows/alloc/: heap.rs
src/timed_mutex/: common.rs  unix.rs
